# squads-v4-python

./: .gitignore  README.md  pyproject.toml  temp.py
remove/: beets.py
src/: accounts.py  logger.py  pda.py  types.py
src/_internal/: compiled_keys.py  utils.py
src/accounts/: vault_transaction.py
src/instructions/: batch_add_transaction.py  batch_create.py  config_transaction_create.py  config_transaction_execute.py  multisig_add_member.py  multisig_add_spending_limit.py  multisig_change_threshold.py  multisig_create_v2.py  multisig_remove_member.py  multisig_remove_spending_limit.py  multisig_set_config_authority.py  program_config_set_multisig_creation_fee.py  proposal_activate.py  proposal_approve.py  proposal_cancel_v2.py  proposal_create.py  proposal_reject.py  spending_limit_use.py  transaction_buffer_close.py  vault_transaction_create.py  vault_transaction_execute.py
src/rpc/: config_transaction_create.py  config_transaction_execute.py  multisig_add_member.py  multisig_add_spending_limit.py  multisig_change_threshold.py  multisig_create_v2.py  multisig_remove_member.py  multisig_remove_spending_limit.py  multisig_set_config_authority.py  proposal_activate.py  proposal_approve.py  proposal_cancel_v2.py  proposal_create.py  proposal_reject.py  spending_limit_use.py  vault_transaction_creare.py  vault_transaction_create.py  vault_transaction_execute.py
src/shared/: logger.py
src/squads/: accounts.py  instructions.py  rpc.py  transactions.py
src/transactions/: config_transaction_create.py  config_transaction_execute.py  multisig_add_member.py  (+14 more)
(+112 files in other folders)
